# ching-tech-metereye

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docker/: .env.example  docker-compose.yml  init-db.sh
docs/: database-setup.md
openspec/: project.md
openspec/changes/archive/2026-01-19-add-alarm-indicator-detection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-19-add-alarm-indicator-detection/specs/alarm-detection/: spec.md
openspec/specs/alarm-detection/: spec.md
scripts/: dev-run.sh  install.sh  tapocam-ctl  tapocam.service  uninstall.sh
src/ctme/: __init__.py  camera_manager.py  config_yaml.py  indicator.py  main.py  models.py  recognition.py  runner.py
src/ctme/api/: __init__.py  config_routes.py  server.py
src/ctme/api/static/: config.html  index.html
src/ctme/api/static/css/: style.css
src/ctme/api/static/js/: perspective.js
src/ctme/export/: __init__.py  base.py  database.py  http.py  mqtt.py
tests/: test_recognition.py
